# primegame

./: Anchor.toml  Cargo.toml  README  README.md  client.js  client.ts  package-lock.json  package.json  run_test.sh  tsconfig.json
app/: app.js  index.html  listen.js  listen.py  listen.ts  prime_slot_checker.json  server.js
math_utils/: Cargo.toml
math_utils/src/: lib.rs
programs/prime_slot_checker/: Cargo.toml
programs/prime_slot_checker/src/: lib.rs
tests/: check_rate.ts  claim_lamports.ts  init_tests.ts  initialize_treasury.ts  pay_for_points.ts  payment_test.ts  prime_slot_checker.ts  run_game_test.ts  trade_won_points.ts  working_test.ts
